--- a/src/ConsoleApp1/project.json
+++ b/src/ConsoleApp1/project.json
@@ -1,14 +1,13 @@
 ﻿{
   "dependencies": {
-    "NUnit": "3.4.1",
-    "dotnet-test-nunit": "3.4.0-beta-2"
+    "xunit": "2.2.0-beta3-build3402",
+    "dotnet-test-xunit": "2.2.0-preview2-build1029"
   },
 
-  "testRunner": "nunit",
+  "testRunner": "xunit",
 
   "frameworks": {
     "netcoreapp1.1": {
-      "imports": "portable-net45+win8",
       "dependencies": {
         "Microsoft.NETCore.App": {
           "type": "platform",
